objects/Batch_Job_Invoker__c.object
<CustomObject>
    <description>Custom Object To Invoke batch based on Type.</description>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <label>Account Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consider_New_or_Changed_Territories_Only__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Consider New or Changed Territories Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REgion__c</fullName>
        <label>Region</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>InProgress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubRegion1__c</fullName>
        <label>SubRegion1</label>
        <picklist>
            <controllingField>REgion__c</controllingField>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP without Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GWE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iberia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK &amp; I</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubRegion2__c</fullName>
        <label>SubRegion2</label>
        <picklist>
            <controllingField>SubRegion1__c</controllingField>
            <picklistValues>
                <fullName>CHK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Sea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rest of Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States Extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian Federation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slovakia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Norway</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Territory Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Oppty Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Realignment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty On OLI Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Realignment Scheduler</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Batch Job Invoker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Realignment Scheduler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Type_is_TM_AccountRectype_not_null</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(Type__c, &apos;Territory Management&apos;) , ISBLANK(TEXT(Account_Record_Type__c) )  , false)</errorConditionFormula>
        <errorDisplayField>Account_Record_Type__c</errorDisplayField>
        <errorMessage>For Territory Management please select Account record type value. It should not be &apos;None&apos;.</errorMessage>
    </validationRules>
</CustomObject>